Attempt to fix site being too wide on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,14 @@ html {
     scroll-behavior: smooth;
 }
 
+body {
+    width:100%;
+}
+
+main {
+    width:100%;
+}
+
 section {
     width:100%;
     display:flex;
